--- a/DAT/locais/index.html
+++ b/DAT/locais/index.html
@@ -4,15 +4,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Locais</title>
-	<link rel="icon" href="https://student.dei.uc.pt/~avmendes/dat/data/dat.ico" type="image/x-icon">
+	<link rel="icon" href="https://avmendes.github.io/uni/DAT/data/dat.ico" type="image/x-icon">
 
-	<link rel="stylesheet" type="text/css" href="https://student.dei.uc.pt/~avmendes/dat/CSS/locais_min.css">
-	<link rel="stylesheet" type="text/css" href="https://student.dei.uc.pt/~avmendes/dat/CSS/style_min.css">
-	<link rel="stylesheet" type="text/css" href="https://student.dei.uc.pt/~avmendes/dat/CSS/mobile_min.css">
+	<link rel="stylesheet" type="text/css" href="https://avmendes.github.io/uni/DAT/CSS/locais_min.css">
+	<link rel="stylesheet" type="text/css" href="https://avmendes.github.io/uni/DAT/CSS/style_min.css">
+	<link rel="stylesheet" type="text/css" href="https://avmendes.github.io/uni/DAT/CSS/mobile_min.css">
 
-	<script defer src="https://student.dei.uc.pt/~avmendes/dat/libraries/p5.min.js"></script>
-	<script defer src="https://student.dei.uc.pt/~avmendes/dat/JS/logoGen_JS.js"></script>
-	<script src="https://student.dei.uc.pt/~avmendes/dat/libraries/jquery.min.js"></script>
+	<script defer src="https://avmendes.github.io/uni/DAT/libraries/p5.min.js"></script>
+	<script defer src="https://avmendes.github.io/uni/DAT/JS/logoGen_JS.js"></script>
+	<script src="https://avmendes.github.io/uni/DAT/libraries/jquery.min.js"></script>
 </head>
 
 <body>
@@ -24,10 +24,10 @@
 
 	<header>
 		<div id="logo">
-			<a href="https://student.dei.uc.pt/~avmendes/dat/" id="processing"></a>
+			<a href="https://avmendes.github.io/uni/DAT/" id="processing"></a>
 
-			<img id="complementoV" src="https://student.dei.uc.pt/~avmendes/dat/data/comp_dat_vertical.png">
-			<img id="complementoH" src="https://student.dei.uc.pt/~avmendes/dat/data/comp_dat_horizontal.png">
+			<img id="complementoV" src="https://avmendes.github.io/uni/DAT/data/comp_dat_vertical.png">
+			<img id="complementoH" src="https://avmendes.github.io/uni/DAT/data/comp_dat_horizontal.png">
 		</div>
 	</header>
 
@@ -35,20 +35,20 @@
 		<div class="web">
 			<div id="sobre" class="desliza-container">
 				<div class="link-container">
-					<a href="https://student.dei.uc.pt/~avmendes/dat/sobre/">sobre</a>
+					<a href="https://avmendes.github.io/uni/DAT/sobre/">sobre</a>
 				</div>
 			</div>
 
 			<div id="intervenientes" class="desliza-container">
 				<div class="link-container">
-					<a href="https://student.dei.uc.pt/~avmendes/dat/intervenientes/">intervenientes</a>
-					<a href="https://student.dei.uc.pt/~avmendes/dat/locais/">locais</a>
+					<a href="https://avmendes.github.io/uni/DAT/intervenientes/">intervenientes</a>
+					<a href="https://avmendes.github.io/uni/DAT/locais/">locais</a>
 				</div>
 			</div>
 
 			<div id="contactos" class="desliza-container">
 				<div class="link-container">
-					<a href="https://student.dei.uc.pt/~avmendes/dat/contactos/">contactos</a>
+					<a href="https://avmendes.github.io/uni/DAT/contactos/">contactos</a>
 				</div>
 			</div>
 
@@ -58,10 +58,10 @@
 		</div>
 
 		<div class="mobile">
-			<a class="" href="https://student.dei.uc.pt/~avmendes/dat/sobre/">sobre</a>
-			<a class="" href="https://student.dei.uc.pt/~avmendes/dat/intervenientes/">intervenientes</a>
-			<a class="atual" href="https://student.dei.uc.pt/~avmendes/dat/locais/">locais</a>
-			<a class="" href="https://student.dei.uc.pt/~avmendes/dat/contactos/">contactos</a>
+			<a class="" href="https://avmendes.github.io/uni/DAT/sobre/">sobre</a>
+			<a class="" href="https://avmendes.github.io/uni/DAT/intervenientes/">intervenientes</a>
+			<a class="atual" href="https://avmendes.github.io/uni/DAT/locais/">locais</a>
+			<a class="" href="https://avmendes.github.io/uni/DAT/contactos/">contactos</a>
 		</div>
 	</nav>	
 
@@ -99,7 +99,7 @@
 
 		<div class="mobile">
 			<div class="card darq">
-				<img src="https://student.dei.uc.pt/~avmendes/dat/data/darq_mobile.jpg">
+				<img src="https://avmendes.github.io/uni/DAT/data/darq_mobile.jpg">
 
 				<div class="info">
 					<h1>darq</h1>
@@ -113,7 +113,7 @@
 			</div>
 
 			<div class="card dei">
-				<img src="https://student.dei.uc.pt/~avmendes/dat/data/dei_mobile.jpg">
+				<img src="https://avmendes.github.io/uni/DAT/data/dei_mobile.jpg">
 
 				<div class="info">
 					<h1>dei</h1>
@@ -127,7 +127,7 @@
 			</div>
 
 			<div class="card museu">
-				<img src="https://student.dei.uc.pt/~avmendes/dat/data/museu_ciencia_mobile.jpg">
+				<img src="https://avmendes.github.io/uni/DAT/data/museu_ciencia_mobile.jpg">
 
 				<div class="info">
 					<h1>laboratorio chimico</h1>
@@ -147,19 +147,19 @@
 		<div class="container">
 			<div class="evento 1/2">
 				<p>2019</p>
-				<img src="https://student.dei.uc.pt/~avmendes/dat/data/dat.png">
+				<img src="https://avmendes.github.io/uni/DAT/data/dat.png">
 			</div>
 
 			<div class="redesSociais 1/2">
-				<a href="http://www.facebook.com/datCoimbra"><img src="https://student.dei.uc.pt/~avmendes/dat/data/facebook.png"></a>
-				<a href="http://www.instagram.com/dat"><img src="https://student.dei.uc.pt/~avmendes/dat/data/instagram.png"></a>
+				<a href="http://www.facebook.com/datCoimbra"><img src="https://avmendes.github.io/uni/DAT/data/facebook.png"></a>
+				<a href="http://www.instagram.com/dat"><img src="https://avmendes.github.io/uni/DAT/data/instagram.png"></a>
 			</div>
 		</div>
 	</footer>
 
 	<div id="starterScreen"></div>
 
-	<script src="https://student.dei.uc.pt/~avmendes/dat/JS/lottie.js"></script>
-	<script src="https://student.dei.uc.pt/~avmendes/dat/JS/nav.js"></script>
+	<script src="https://avmendes.github.io/uni/DAT/JS/lottie.js"></script>
+	<script src="https://avmendes.github.io/uni/DAT/JS/nav.js"></script>
 </body>
 </html>
