--- a/DAT/sobre/index.html
+++ b/DAT/sobre/index.html
@@ -4,24 +4,24 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Sobre</title>
-	<link rel="icon" href="https://student.dei.uc.pt/~avmendes/dat/data/dat.ico" type="image/x-icon">
+	<link rel="icon" href="https://avmendes.github.io/uni/DAT/data/dat.ico" type="image/x-icon">
 
-	<link rel="stylesheet" type="text/css" href="https://student.dei.uc.pt/~avmendes/dat/CSS/sobre_min.css">
-	<link rel="stylesheet" type="text/css" href="https://student.dei.uc.pt/~avmendes/dat/CSS/style_min.css">
-	<link rel="stylesheet" type="text/css" href="https://student.dei.uc.pt/~avmendes/dat/CSS/mobile_min.css">
+	<link rel="stylesheet" type="text/css" href="https://avmendes.github.io/uni/DAT/CSS/sobre_min.css">
+	<link rel="stylesheet" type="text/css" href="https://avmendes.github.io/uni/DAT/CSS/style_min.css">
+	<link rel="stylesheet" type="text/css" href="https://avmendes.github.io/uni/DAT/CSS/mobile_min.css">
 
-	<script defer src="https://student.dei.uc.pt/~avmendes/dat/libraries/p5.min.js"></script>
-	<script defer src="https://student.dei.uc.pt/~avmendes/dat/JS/logoGen_JS.js"></script>
-	<script src="https://student.dei.uc.pt/~avmendes/dat/libraries/jquery.min.js"></script>
+	<script defer src="https://avmendes.github.io/uni/DAT/libraries/p5.min.js"></script>
+	<script defer src="https://avmendes.github.io/uni/DAT/JS/logoGen_JS.js"></script>
+	<script src="https://avmendes.github.io/uni/DAT/libraries/jquery.min.js"></script>
 </head>
 
 <body>
 	<header>
 		<div id="logo">
-			<a href="https://student.dei.uc.pt/~avmendes/dat/" id="processing"></a>
+			<a href="https://avmendes.github.io/uni/DAT/" id="processing"></a>
 
-			<img id="complementoV" src="https://student.dei.uc.pt/~avmendes/dat/data/comp_dat_vertical.png">
-			<img id="complementoH" src="https://student.dei.uc.pt/~avmendes/dat/data/comp_dat_horizontal.png">
+			<img id="complementoV" src="https://avmendes.github.io/uni/DAT/data/comp_dat_vertical.png">
+			<img id="complementoH" src="https://avmendes.github.io/uni/DAT/data/comp_dat_horizontal.png">
 		</div>
 	</header>
 
@@ -29,20 +29,20 @@
 		<div class="web">
 			<div id="sobre" class="desliza-container">
 				<div class="link-container">
-					<a href="https://student.dei.uc.pt/~avmendes/dat/sobre/">sobre</a>
+					<a href="https://avmendes.github.io/uni/DAT/sobre/">sobre</a>
 				</div>
 			</div>
 
 			<div id="intervenientes" class="desliza-container">
 				<div class="link-container">
-					<a href="https://student.dei.uc.pt/~avmendes/dat/intervenientes/">intervenientes</a>
-					<a href="https://student.dei.uc.pt/~avmendes/dat/locais/">locais</a>
+					<a href="https://avmendes.github.io/uni/DAT/intervenientes/">intervenientes</a>
+					<a href="https://avmendes.github.io/uni/DAT/locais/">locais</a>
 				</div>
 			</div>
 
 			<div id="contactos" class="desliza-container">
 				<div class="link-container">
-					<a href="https://student.dei.uc.pt/~avmendes/dat/contactos/">contactos</a>
+					<a href="https://avmendes.github.io/uni/DAT/contactos/">contactos</a>
 				</div>
 			</div>
 
@@ -52,10 +52,10 @@
 		</div>
 
 		<div class="mobile">
-			<a class="atual" href="https://student.dei.uc.pt/~avmendes/dat/sobre/">sobre</a>
-			<a class="" href="https://student.dei.uc.pt/~avmendes/dat/intervenientes/">intervenientes</a>
-			<a class="" href="https://student.dei.uc.pt/~avmendes/dat/locais/">locais</a>
-			<a class="" href="https://student.dei.uc.pt/~avmendes/dat/contactos/">contactos</a>
+			<a class="atual" href="https://avmendes.github.io/uni/DAT/sobre/">sobre</a>
+			<a class="" href="https://avmendes.github.io/uni/DAT/intervenientes/">intervenientes</a>
+			<a class="" href="https://avmendes.github.io/uni/DAT/locais/">locais</a>
+			<a class="" href="https://avmendes.github.io/uni/DAT/contactos/">contactos</a>
 		</div>
 	</nav>
 
@@ -63,15 +63,15 @@
 		<p class="conteudoSobre first">
 			“DAT: Design, Arte & Tecnologia” é um ciclo de conferências, conversas e workshops. Que se vai realizar anualmente no âmbito dos cursos de Licenciatura e Mestrado em Design e Multimédia da Faculdade de Ciências e de Tecnologia da Universidade de Coimbra.
 		</p>
-		<img class="rect" src="https://student.dei.uc.pt/~avmendes/dat/data/Rect.png">
+		<img class="rect" src="https://avmendes.github.io/uni/DAT/data/Rect.png">
 		<p class="conteudoSobre">
 			A primeira edição decorrerá em Abril de 2019, e terá a duração de 2 ou 3 dias que poderão ter lugar, em vários locais da cidade de Coimbra, como por exemplo no auditório do Museu da Ciência, no DARQ e no DEI.
 		</p>
-		<img class="ponto" src="https://student.dei.uc.pt/~avmendes/dat/data/Ponto.png">
+		<img class="ponto" src="https://avmendes.github.io/uni/DAT/data/Ponto.png">
 		<p class="conteudoSobre">
 			Esta acção de divulgação pública dentro e fora da Faculdade pretende não só mostrar o trabalho de diferentes profissionais cujo trabalho é amplamente reconhecido, como contribuir para a divulgação do cursos, os primeiros nesta área leccionados na Universidade de Coimbra.
 		</p>
-		<img class="anel" src="https://student.dei.uc.pt/~avmendes/dat/data/Anel.png">
+		<img class="anel" src="https://avmendes.github.io/uni/DAT/data/Anel.png">
 		<p class="conteudoSobre">
 			O programa é constituído por <span>convidados</span> de diversas áreas (Design Gráfico, Tipografia, Design de Interacção, Web Design, Arquitectura, Teoria do Design, Arte, Ilustração, Arte computacional, Cinema, etc.).
 		</p>
@@ -83,17 +83,17 @@
 		<div class="container">
 			<div class="evento 1/2">
 				<p>2019</p>
-				<img src="https://student.dei.uc.pt/~avmendes/dat/data/dat.png">
+				<img src="https://avmendes.github.io/uni/DAT/data/dat.png">
 			</div>
 
 			<div class="redesSociais 1/2">
-				<a href="http://www.facebook.com/datCoimbra"><img src="https://student.dei.uc.pt/~avmendes/dat/data/facebook.png"></a>
-				<a href="http://www.instagram.com/dat"><img src="https://student.dei.uc.pt/~avmendes/dat/data/instagram.png"></a>
+				<a href="http://www.facebook.com/datCoimbra"><img src="https://avmendes.github.io/uni/DAT/data/facebook.png"></a>
+				<a href="http://www.instagram.com/dat"><img src="https://avmendes.github.io/uni/DAT/data/instagram.png"></a>
 			</div>
 		</div>
 	</footer>
 
-	<script src="https://student.dei.uc.pt/~avmendes/dat/JS/lottie.js"></script>
-	<script src="https://student.dei.uc.pt/~avmendes/dat/JS/nav.js"></script>
+	<script src="https://avmendes.github.io/uni/DAT/JS/lottie.js"></script>
+	<script src="https://avmendes.github.io/uni/DAT/JS/nav.js"></script>
 </body>
 </html>
