--- a/dat/contactos/index.html
+++ b/dat/contactos/index.html
@@ -4,24 +4,24 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Contactos</title>
-	<link rel="icon" href="https://avmendes.github.io/uni/DAT/data/dat.ico" type="image/x-icon">
+	<link rel="icon" href="https://avmendes.github.io/uni/dat/data/dat.ico" type="image/x-icon">
 
-	<link rel="stylesheet" type="text/css" href="https://avmendes.github.io/uni/DAT/CSS/contactos_min.css">
-	<link rel="stylesheet" type="text/css" href="https://avmendes.github.io/uni/DAT/CSS/style_min.css">
-	<link rel="stylesheet" type="text/css" href="https://avmendes.github.io/uni/DAT/CSS/mobile_min.css">
+	<link rel="stylesheet" type="text/css" href="https://avmendes.github.io/uni/dat/CSS/contactos_min.css">
+	<link rel="stylesheet" type="text/css" href="https://avmendes.github.io/uni/dat/CSS/style_min.css">
+	<link rel="stylesheet" type="text/css" href="https://avmendes.github.io/uni/dat/CSS/mobile_min.css">
 
-	<script defer src="https://avmendes.github.io/uni/DAT/libraries/p5.min.js"></script>
-	<script defer src="https://avmendes.github.io/uni/DAT/JS/logoGen_JS.js"></script>
-	<script src="https://avmendes.github.io/uni/DAT/libraries/jquery.min.js"></script>
+	<script defer src="https://avmendes.github.io/uni/dat/libraries/p5.min.js"></script>
+	<script defer src="https://avmendes.github.io/uni/dat/JS/logoGen_JS.js"></script>
+	<script src="https://avmendes.github.io/uni/dat/libraries/jquery.min.js"></script>
 </head>
 
 <body>
 	<header>
 		<div id="logo">
-			<a href="https://avmendes.github.io/uni/DAT/" id="processing"></a>
+			<a href="https://avmendes.github.io/uni/dat/" id="processing"></a>
 
-			<img id="complementoV" src="https://avmendes.github.io/uni/DAT/data/comp_dat_vertical.png">
-			<img id="complementoH" src="https://avmendes.github.io/uni/DAT/data/comp_dat_horizontal.png">
+			<img id="complementoV" src="https://avmendes.github.io/uni/dat/data/comp_dat_vertical.png">
+			<img id="complementoH" src="https://avmendes.github.io/uni/dat/data/comp_dat_horizontal.png">
 		</div>
 	</header>
 
@@ -29,20 +29,20 @@
 		<div class="web">
 			<div id="sobre" class="desliza-container">
 				<div class="link-container">
-					<a href="https://avmendes.github.io/uni/DAT/sobre/">sobre</a>
+					<a href="https://avmendes.github.io/uni/dat/sobre/">sobre</a>
 				</div>
 			</div>
 
 			<div id="intervenientes" class="desliza-container">
 				<div class="link-container">
-					<a href="https://avmendes.github.io/uni/DAT/intervenientes/">intervenientes</a>
-					<a href="https://avmendes.github.io/uni/DAT/locais/">locais</a>
+					<a href="https://avmendes.github.io/uni/dat/intervenientes/">intervenientes</a>
+					<a href="https://avmendes.github.io/uni/dat/locais/">locais</a>
 				</div>
 			</div>
 
 			<div id="contactos" class="desliza-container">
 				<div class="link-container">
-					<a href="https://avmendes.github.io/uni/DAT/contactos/">contactos</a>
+					<a href="https://avmendes.github.io/uni/dat/contactos/">contactos</a>
 				</div>
 			</div>
 
@@ -52,10 +52,10 @@
 		</div>
 
 		<div class="mobile">
-			<a class="" href="https://avmendes.github.io/uni/DAT/sobre/">sobre</a>
-			<a class="" href="https://avmendes.github.io/uni/DAT/intervenientes/">intervenientes</a>
-			<a class="" href="https://avmendes.github.io/uni/DAT/locais/">locais</a>
-			<a class="atual" href="https://avmendes.github.io/uni/DAT/contactos/">contactos</a>
+			<a class="" href="https://avmendes.github.io/uni/dat/sobre/">sobre</a>
+			<a class="" href="https://avmendes.github.io/uni/dat/intervenientes/">intervenientes</a>
+			<a class="" href="https://avmendes.github.io/uni/dat/locais/">locais</a>
+			<a class="atual" href="https://avmendes.github.io/uni/dat/contactos/">contactos</a>
 		</div>
 	</nav>
 
@@ -64,14 +64,14 @@
 			<div class="card nuno cOne">
 				<h1>nuno coelho</h1>
 				<!--<div class="separador"></div>-->
-				<img class="face1" src="https://avmendes.github.io/uni/DAT/data/face1.png">
+				<img class="face1" src="https://avmendes.github.io/uni/dat/data/face1.png">
 				<a href="https://apps.uc.pt/mypage/faculty/uc26736/pt">Visit my page here</a>
 			</div>
 
 			<div class="card pedro cTwo">
 				<h1>pedro martins</h1>
 				<!--<div class="separador"></div>-->
-				<img class="face2" src="https://avmendes.github.io/uni/DAT/data/face2.png">
+				<img class="face2" src="https://avmendes.github.io/uni/dat/data/face2.png">
 				<a href="https://www.cisuc.uc.pt/people/show/2033">Visit my page here</a>
 			</div>
 		</div>
@@ -83,17 +83,17 @@
 		<div class="container">
 			<div class="evento 1/2">
 				<p>2019</p>
-				<img src="https://avmendes.github.io/uni/DAT/data/dat.png">
+				<img src="https://avmendes.github.io/uni/dat/data/dat.png">
 			</div>
 
 			<div class="redesSociais 1/2">
-				<a href="http://www.facebook.com/datCoimbra"><img src="https://avmendes.github.io/uni/DAT/data/facebook.png"></a>
-				<a href="http://www.instagram.com/dat"><img src="https://avmendes.github.io/uni/DAT/data/instagram.png"></a>
+				<a href="http://www.facebook.com/datCoimbra"><img src="https://avmendes.github.io/uni/dat/data/facebook.png"></a>
+				<a href="http://www.instagram.com/dat"><img src="https://avmendes.github.io/uni/dat/data/instagram.png"></a>
 			</div>
 		</div>
 	</footer>
 
-	<script src="https://avmendes.github.io/uni/DAT/JS/lottie.js"></script>
-	<script src="https://avmendes.github.io/uni/DAT/JS/nav.js"></script>
+	<script src="https://avmendes.github.io/uni/dat/JS/lottie.js"></script>
+	<script src="https://avmendes.github.io/uni/dat/JS/nav.js"></script>
 </body>
 </html>	
