--- a/dat/intervenientes/index.html
+++ b/dat/intervenientes/index.html
@@ -4,25 +4,25 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Intervenientes</title>
-	<link rel="icon" href="https://avmendes.github.io/uni/DAT/data/dat.ico" type="image/x-icon">
+	<link rel="icon" href="https://avmendes.github.io/uni/dat/data/dat.ico" type="image/x-icon">
 
-	<link rel="stylesheet" href="https://avmendes.github.io/uni/DAT/CSS/flickity-docs_min.css" media="screen">
-	<link rel="stylesheet" type="text/css" href="https://avmendes.github.io/uni/DAT/CSS/style_min.css">
-	<link rel="stylesheet" type="text/css" href="https://avmendes.github.io/uni/DAT/CSS/intervenientes_min.css">
-	<link rel="stylesheet" type="text/css" href="https://avmendes.github.io/uni/DAT/CSS/mobile_min.css">
+	<link rel="stylesheet" href="https://avmendes.github.io/uni/dat/CSS/flickity-docs_min.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="https://avmendes.github.io/uni/dat/CSS/style_min.css">
+	<link rel="stylesheet" type="text/css" href="https://avmendes.github.io/uni/dat/CSS/intervenientes_min.css">
+	<link rel="stylesheet" type="text/css" href="https://avmendes.github.io/uni/dat/CSS/mobile_min.css">
 
-	<script defer src="https://avmendes.github.io/uni/DAT/libraries/p5.min.js"></script>
-	<script defer src="https://avmendes.github.io/uni/DAT/JS/logoGen_JS.js"></script>
-	<script src="https://avmendes.github.io/uni/DAT/libraries/jquery.min.js"></script>
+	<script defer src="https://avmendes.github.io/uni/dat/libraries/p5.min.js"></script>
+	<script defer src="https://avmendes.github.io/uni/dat/JS/logoGen_JS.js"></script>
+	<script src="https://avmendes.github.io/uni/dat/libraries/jquery.min.js"></script>
 </head>
 
 <body>
 	<header>
 		<div id="logo">
-			<a href="https://avmendes.github.io/uni/DAT/" id="processing"></a>
+			<a href="https://avmendes.github.io/uni/dat/" id="processing"></a>
 
-			<img id="complementoV" src="https://avmendes.github.io/uni/DAT/data/comp_dat_vertical.png">
-			<img id="complementoH" src="https://avmendes.github.io/uni/DAT/data/comp_dat_horizontal.png">
+			<img id="complementoV" src="https://avmendes.github.io/uni/dat/data/comp_dat_vertical.png">
+			<img id="complementoH" src="https://avmendes.github.io/uni/dat/data/comp_dat_horizontal.png">
 		</div>
 	</header>
 
@@ -30,20 +30,20 @@
 		<div class="web">
 			<div id="sobre" class="desliza-container">
 				<div class="link-container">
-					<a href="https://avmendes.github.io/uni/DAT/sobre/">sobre</a>
+					<a href="https://avmendes.github.io/uni/dat/sobre/">sobre</a>
 				</div>
 			</div>
 
 			<div id="intervenientes" class="desliza-container">
 				<div class="link-container">
-					<a href="https://avmendes.github.io/uni/DAT/intervenientes/">intervenientes</a>
-					<a href="https://avmendes.github.io/uni/DAT/locais/">locais</a>
+					<a href="https://avmendes.github.io/uni/dat/intervenientes/">intervenientes</a>
+					<a href="https://avmendes.github.io/uni/dat/locais/">locais</a>
 				</div>
 			</div>
 
 			<div id="contactos" class="desliza-container">
 				<div class="link-container">
-					<a href="https://avmendes.github.io/uni/DAT/contactos/">contactos</a>
+					<a href="https://avmendes.github.io/uni/dat/contactos/">contactos</a>
 				</div>
 			</div>
 
@@ -53,10 +53,10 @@
 		</div>
 
 		<div class="mobile">
-			<a class="" href="https://avmendes.github.io/uni/DAT/sobre/">sobre</a>
-			<a class="atual" href="https://avmendes.github.io/uni/DAT/intervenientes/">intervenientes</a>
-			<a class="" href="https://avmendes.github.io/uni/DAT/locais/">locais</a>
-			<a class="" href="https://avmendes.github.io/uni/DAT/contactos/">contactos</a>
+			<a class="" href="https://avmendes.github.io/uni/dat/sobre/">sobre</a>
+			<a class="atual" href="https://avmendes.github.io/uni/dat/intervenientes/">intervenientes</a>
+			<a class="" href="https://avmendes.github.io/uni/dat/locais/">locais</a>
+			<a class="" href="https://avmendes.github.io/uni/dat/contactos/">contactos</a>
 		</div>
 	</nav>	
 
@@ -67,7 +67,7 @@
 					<h1>mário feliciano</h1>
 					<h2>(born 1969) studied graphic design at IADE (Lisbon) until 1993.</h2>
 
-					<img src="https://avmendes.github.io/uni/DAT/data/mario.jpg">
+					<img src="https://avmendes.github.io/uni/dat/data/mario.jpg">
 
 					<p class="biografia">
 						Before finishing his degree he started to work as a graphic designer at Surf Portugal magazine, where he stayed there as art director during the next seven years. In 1994 he founded his design studio (Secretonix) that produced a wide range of design projects from editorial to corporate design. After having commissioned one typeface for Adobe (called Strumpf) and after publishing some of his early work in other foundries, in 2001 he creates the Feliciano Type Foundry and starts to publish his own designs and creating custom typefaces for clients around the world. He is a member of ATypI since 1997. In 2006 Mário was the local organiser of the annual conference held in Lisbon. He is also a member of AGI (Alliance Graphique Internationale) since 2009. He is the author of several custom typefaces, such as: Expresso (for the Portuguese weekly newspaper Expresso), Sueca (for the Swedish newspaper Svenska Dagbladet), Majerit (for the Spanish newspaper El País) and BesSans for Banco Espírito Santo. Feliciano's typefaces have been used by a wide range of clients around the world, from big corporations to renowned international publications such as Newsweek, The Sunday Times or Elle Magazine. His most popular typeface is Flama that is used as a customised version on the Portuguese Passport and Citizen Card along with his other typeface Merlo. In the recent years Mário has been working on expanding FTF's library and giving typographic consultancy.
@@ -78,7 +78,7 @@
 					<h1>thomas castro</h1>
 					<h2>founded LUST  with Jeroen Barendse, and Dimitri Nieuwenhuizen</h2>
 
-					<img src="https://avmendes.github.io/uni/DAT/data/thomas.jpg">
+					<img src="https://avmendes.github.io/uni/dat/data/thomas.jpg">
 
 					<p class="biografia">
 						LUST works in a broad spectrum of media including traditional printwork and book design, abstract cartography and data-visualisations, new media and interactive installations, and architectural graphics. Moreover, LUST is deeply interested in exploring new pathways for design at the cutting edge where new media and information technologies, architecture and urban systems and graphic design overlap.<br>
@@ -91,7 +91,7 @@
 					<h1>luna maurer</h1>
 					<h2>runs the Amsterdam-based design studio Moniker with Roel Wouters. (They founded it in 2012 with Jonathan Puckey.)</h2>
 
-					<img src="https://avmendes.github.io/uni/DAT/data/luna.jpg">
+					<img src="https://avmendes.github.io/uni/dat/data/luna.jpg">
 
 					<p class="biografia">
 						Moniker “explores the characteristics of technology, how people use it, and how it influences people’s daily lives. "They’ve taught media courses at the Gerrit Rietveld Academy, the Sandberg Institute and at Yale University, and they regularly give workshops and lectures around the world. Moniker, together with Edo Paulus, wrote Conditional Design, a manifesto and “experimental playground” that they have said is “based on the notion that designing a logic-based environment within which results take shape are more interesting and fruitful than a directly designed object.” They tested these ideas during weekly workshops, which were then posted online. The Conditional Design Workbook was published in 2013 by Valiz. Here, Maurer discusses what it means to break down complicated ideas, the importance of having a guiding manifesto, and the difference (or lack thereof) between an artist and a designer.
@@ -102,7 +102,7 @@
 
 		<div class="mobile">
 			<div class="slider mário sOne">
-				<img src="https://avmendes.github.io/uni/DAT/data/mario_mobile.jpg">
+				<img src="https://avmendes.github.io/uni/dat/data/mario_mobile.jpg">
 
 				<div class="info">
 					<h1>mário feliciano</h1>
@@ -117,7 +117,7 @@
 			</div>
 
 			<div class="slider thomas sTwo">
-				<img src="https://avmendes.github.io/uni/DAT/data/thomas_mobile.jpg">
+				<img src="https://avmendes.github.io/uni/dat/data/thomas_mobile.jpg">
 				<div class="info">
 					<h1>thomas castro</h1>
 					<h2>founded LUST  with Jeroen Barendse, and Dimitri Nieuwenhuizen</h2>
@@ -133,7 +133,7 @@
 			</div>
 
 			<div class="slider luna sThree">
-				<img src="https://avmendes.github.io/uni/DAT/data/luna_mobile.jpg">
+				<img src="https://avmendes.github.io/uni/dat/data/luna_mobile.jpg">
 
 				<div class="info">
 					<h1>luna maurer</h1>
@@ -155,20 +155,20 @@
 		<div class="container">
 			<div class="evento 1/2">
 				<p>2019</p>
-				<img src="https://avmendes.github.io/uni/DAT/data/dat.png">
+				<img src="https://avmendes.github.io/uni/dat/data/dat.png">
 			</div>
 
 			<div class="redesSociais 1/2">
-				<a href="http://www.facebook.com/datCoimbra"><img src="https://avmendes.github.io/uni/DAT/data/facebook.png"></a>
-				<a href="http://www.instagram.com/dat"><img src="https://avmendes.github.io/uni/DAT/data/instagram.png"></a>
+				<a href="http://www.facebook.com/datCoimbra"><img src="https://avmendes.github.io/uni/dat/data/facebook.png"></a>
+				<a href="http://www.instagram.com/dat"><img src="https://avmendes.github.io/uni/dat/data/instagram.png"></a>
 			</div>
 		</div>
 	</footer>
 
-	<script src="https://avmendes.github.io/uni/DAT/JS/flickity-docs.min.js"></script>
+	<script src="https://avmendes.github.io/uni/dat/JS/flickity-docs.min.js"></script>
 	<script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
-	<script src="https://avmendes.github.io/uni/DAT/JS/intervenientes.js"></script>
-	<script src="https://avmendes.github.io/uni/DAT/JS/lottie.js"></script>
-	<script src="https://avmendes.github.io/uni/DAT/JS/nav.js"></script>
+	<script src="https://avmendes.github.io/uni/dat/JS/intervenientes.js"></script>
+	<script src="https://avmendes.github.io/uni/dat/JS/lottie.js"></script>
+	<script src="https://avmendes.github.io/uni/dat/JS/nav.js"></script>
 </body>
 </html>	
